<resources>
    <string name="app_name">vinilos</string>
    <string name="menu_albums">Álbumes</string>
    <string name="menu_artists">Artistas</string>
    <string name="menu_collectors">Coleccionistas</string>
    <string name="menu_options">Opciones</string>
    <string name="menu_goBack">Atrás</string>
    <string name="Atras">Atrás</string>
    <string name="detalle_album_content_description"> Imagen de portada del álbum</string>
    <string name="detalle_banda_content_description"> Imagen de la banda</string>
    <string name="detalle_musico_content_description"> Imagen del músico</string>
    <string name="lista_album_content_description"> Imagen de portada de álbum</string>
    <string name="lista_artista_content_description"> Imagen del artista</string>
    <string name="lista_coleccionista_content_description"> Imagen del coleccionista</string>
    <string name="opciones_crear_album_label">Crear álbum</string>
    <string name="opciones_crear_album_description">Icono de opción para crear álbum</string>
    <string name="opciones_asociar_track_label">Asociar tracks a álbum</string>
    <string name="opciones_asociar_track_description">Icono de opción para asociar track a un álbum</string>
    <string name="opciones_titulo_description">Título de menú: Opciones</string>
    <string name="TituloCrearAlbum">Crear álbum</string>
    <string name="guardarCrearAlbum">Guardar</string>
    <string name="nombreCrearAlbum">Nombre</string>
    <string name="imagenCrearAlbum">Imagen de portada</string>
    <string name="fechaCrearAlbum">Fecha de lanzamiento</string>
    <string name="descripcionCrearAlbum">Descripcion</string>
    <string name="generoCrearAlbum">Género</string>
    <string name="disqueraCrearAlbum">Disquera</string>
    <string name="hintNombreCrearAlbum">Introduce el nombre del álbum</string>
    <string name="hintImagenCrearAlbum">Escribe un enlace. ej: https://www.google.com/search?q=imagen</string>
    <string name="hintFechaCrearAlbum">Fecha de lanzamiento (YYYY-mm-dd)</string>
    <string name="hintDescripcionCrearAlbum">Escribe una descripción del álbum</string>
    <string name="hintGeneroCrearAlbum">Introduce el género músical del álbum</string>
    <string name="hintDisqueraCrearAlbum">Escribe la disquera que publicó el álbum</string>
    <string name="tituloAsociarTrack">Asociar Track con álbum</string>
    <string name="nombreAsociarTrackAlbum">Nombre</string>
    <string name="hintTrackAsociarAlbum">Escribe el nombre de la canción</string>
    <string name="duracionTrackAsociarAlbum">Duración</string>
    <string name="hintTrackAsociarAlbumDuracion">Escribe la duración de la canción</string>
    <string name="DetalleAlbumTituloLabel">Título:</string>
    <string name="DetalleAlbumDisqueraLabel">Disquera:</string>
    <string name="DetalleAlbumGeneroLabel">Género:</string>
    <string name="DetalleAlbumLanzamientoLabel">Lanzamiento:</string>
    <string name="DetalleAlbumAsociarTrack">Asociar Track</string>
</resources>