<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="album"
            type="com.example.vinilos.modelos.Album" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetalleAlbum">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/detalle_album_to_lista_album_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@color/background"
                android:minHeight="48dip"
                android:text="@string/menu_goBack"
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/album_asociar_track_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/background"
                android:minHeight="48dip"
                android:text="@string/DetalleAlbumAsociarTrack"
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/DetalleAlbumFoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/detalle_album_content_description"
                android:maxHeight="250dp"
                android:minWidth="200dp"
                android:minHeight="200dp"
                app:imageUrl="@{album.cover}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detalle_album_to_lista_album_button"
                app:layout_constraintWidth="wrap_content"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/DetalleAlbumTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@{album.name}"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetalleAlbumFoto" />

            <TextView
                android:id="@+id/DetalleAlbumDisquera"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@{album.recordLabel}"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/DetalleAlbumDisqueraLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/DetalleAlbumGenero"
                app:layout_constraintTop_toTopOf="@+id/DetalleAlbumDisqueraLabel"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/DetalleAlbumGenero"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@{album.genre}"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/DetalleAlbumGeneroLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/DetalleAlbumLanzamiento"
                app:layout_constraintTop_toTopOf="@+id/DetalleAlbumGeneroLabel" />

            <TextView
                android:id="@+id/DetalleAlbumLanzamiento"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:date="@{album.releaseDate}"
                app:layout_constraintBottom_toBottomOf="@+id/DetalleAlbumLanzamientoLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/DetalleAlbumLanzamientoLabel"
                app:layout_constraintTop_toTopOf="@+id/DetalleAlbumLanzamientoLabel" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetalleAlbumLanzamiento">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/DetalleAlbumDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:justificationMode="inter_word"
                        android:scrollbars="vertical"
                        android:text="@{album.description}"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/DetalleAlbumDisqueraLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/DetalleAlbumDisqueraLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetalleAlbumTitulo" />

            <TextView
                android:id="@+id/DetalleAlbumGeneroLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/DetalleAlbumGeneroLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetalleAlbumDisqueraLabel" />

            <TextView
                android:id="@+id/DetalleAlbumLanzamientoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/DetalleAlbumLanzamientoLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetalleAlbumGeneroLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>